Version 1.4.1 - Fixed system button colors (Lock, Logout, Shutdown) to align with Linux Mint 22.3 standards.

--- a/cinnamon/cinnamon.css
+++ b/cinnamon/cinnamon.css
@@ -2149,15 +2149,15 @@ StScrollBar {
   .menu-right .appmenu-sidebar {
     border-radius: 0; }
   .appmenu-sidebar .appmenu-system-button {
-    background-color: #7b737d; } /* logout/lock buttons but inside menu sidebar*/
+    background-color: #715a6e; } /* logout/lock buttons but inside menu sidebar*/
     .appmenu-sidebar .appmenu-system-button-lock:hover {
-      background-color: #61616b; }
+      background-color: #554654; }
     .appmenu-sidebar .appmenu-system-button-logout:hover {
-      background-color: #61616b; }
+      background-color: #554654; }
     .appmenu-sidebar .appmenu-system-button-shutdown {
-      background-color: #7b737d; }
+      background-color: #715a6e; }
     .appmenu-sidebar .appmenu-system-button-shutdown:hover {
-      background-color: #61616b; }
+      background-color: #554654; }
 
 .appmenu-system-box {
   spacing: 10px; }
@@ -2174,15 +2174,15 @@ StScrollBar {
   padding: 8.4px;
   border: 1px solid transparent;
   border-radius: 9999px;
-  background-color: #7b737d; } /* logout/lock buttons */
+  background-color: #715a6e; } /* logout/lock buttons */
   .appmenu-system-button-shutdown {
-    background-color: #7b737d; }
+    background-color: #715a6e; }
   .appmenu-system-button-lock:hover {
-    background-color: #61616b; }
+    background-color: #554654; }
   .appmenu-system-button-logout:hover {
-    background-color: #61616b; }
+    background-color: #554654; }
   .appmenu-system-button-shutdown:hover {
-    background-color: #61616b; }
+    background-color: #554654; }
 
 .appmenu-application-button-label {
   padding: 0; }
